# Elphgap

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: aniso_speedup.py  db_parity.py  epw_gap_histogram.py  gpu_speedup.py  mgb2_twoband.py
docs/: BENCHMARKS.md  license-and-commercial-use.md  limitations.md  quickstart.md  troubleshooting.md
examples/: pb_like.a2f  quickstart.py
src/elphgap/: __init__.py  __main__.py  allen_dynes.py  cli.py  eliashberg.py  eliashberg_aniso.py  eliashberg_aniso_jax.py  eliashberg_jax.py  grids.py  io.py  units.py
src/elphgap/examples/: __init__.py  pb_like.a2f
tests/: test_aniso.py  test_aniso_jax.py  test_cli.py  test_io_a2f.py  test_jax_backend.py  test_physics.py
tests/data/: pb_epw60_a2f_iso.a2f
