[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elphgap"
version = "0.1.0"
description = "GPU-accelerated anisotropic Migdal-Eliashberg gap solver for phonon-mediated superconductors"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Alexander Oberländer" }, { name = "Claudius Kristmann" }]
keywords = [
  "superconductivity", "eliashberg", "electron-phonon", "migdal-eliashberg",
  "gap-equations", "jax", "gpu", "dft", "epw",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=2.0", "scipy>=1.13"]

[project.optional-dependencies]
cpu-jax = ["jax[cpu]>=0.4.30"]
test = ["pytest>=8"]

[project.urls]
Repository = "https://github.com/KristmannTechnologies/Elphgap"

[tool.hatch.build.targets.wheel]
packages = ["src/elphgap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
