[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elphgap"
dynamic = ["version"]
description = "GPU-accelerated anisotropic Migdal-Eliashberg gap solver for phonon-mediated superconductors"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Alexander Oberländer" }, { name = "Claudius Kristmann" }]
keywords = [
  "superconductivity", "eliashberg", "electron-phonon", "migdal-eliashberg",
  "gap-equations", "jax", "gpu", "dft", "epw",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=2.0", "scipy>=1.13"]

[project.optional-dependencies]
cpu-jax = ["jax[cpu]>=0.4.30"]
test = ["pytest>=8"]

[project.scripts]
elphgap = "elphgap.cli:main"

[project.urls]
Repository = "https://github.com/KristmannTechnologies/Elphgap"
Documentation = "https://github.com/KristmannTechnologies/Elphgap/tree/main/docs"
Issues = "https://github.com/KristmannTechnologies/Elphgap/issues"
Changelog = "https://github.com/KristmannTechnologies/Elphgap/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/elphgap/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/elphgap"]

[tool.hatch.build.targets.sdist]
include = [
  "src/elphgap",
  "tests",
  "docs",
  "examples",
  "benchmarks",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "AUTHORS.md",
  "CITATION.cff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
